<resources>
    <string name="app_name">Tabling-Android</string>

    <!-- waiting detail -->
    <string name="waiting_detail">대기 상세</string>
    <string name="waiting_0">0</string>
    <string name="waiting_status_ing">이용 예정</string>
    <string name="waiting_ing">대기중이에요.</string>
    <string name="waiting_done">이용이 완료되었어요.</string>
    <string name="waiting_number_primary">대기번호 #%d</string>
    <string name="front_waiting">내 앞 대기</string>
    <string name="front_waiting_number">%d</string>
    <string name="front_waiting_team">팀</string>
    <string name="call">전화</string>
    <string name="location">위치</string>
    <string name="store_detail">매장상세</string>
    <string name="waiting_info">대기정보</string>
    <string name="waiting_date">접수일시</string>
    <string name="waiting_number">대기번호</string>
    <string name="waiting_number_data">%d번</string>
    <string name="waiting_person_count">인원</string>
    <string name="waiting_person_data">%d명</string>
    <string name="waiting_state">대기상태</string>
    <string name="waiting_total_price">총 금액</string>
    <string name="waiting_total_price_data">%d원</string>
    <string name="waiting_request">요청사항</string>
    <string name="waiting_request_default">작성한 내용이 없습니다.</string>

    <string name="queue_title">원격 줄서기 내역</string>
    <string name="queue_tab1">이용예정/완료</string>
    <string name="queue_tab2">취소/노쇼</string>

    <string name="queue_chip_wait">이용예정</string>
    <string name="queue_chip_done">이용완료</string>
    <string name="queue_btn_detail">상세보기</string>
    <string name="queue_tv_date">11월 13일 (월)</string>
    <string name="queue_tv_bar">|</string>
    <string name="queue_tv_people">2명</string>
    <string name="queue_tv_store_name">파이브가이즈 여의도</string>
    <string name="queue_tv_waiting">대기번호 #</string>
    <string name="queue_tv_waiting_num">66</string>
    <string name="queue_tv_waiting_info">현재 내 앞 대기</string>
    <string name="queue_tv_waiting_info_num">4팀</string>
    <string name="queue_btn_delay">내 순서 미루기</string>
    <string name="queue_btn_code">확정 코드 입력하기</string>
    <string name="queue_btn_review">리뷰쓰기</string>
    <string name="queue_tv_cancel">주문 취소</string>
    <string name="queue_tv_remain_review">"리뷰 작성 기간이 "</string>
    <string name="queue_tv_remain_review_num">2일</string>
    <string name="queue_tv_remain_review2">" 남았어요!"</string>
    <string name="queue_review_end">리뷰 작성 기간이 지났어요.</string>

    <!-- popular store -->
    <string name="area_seoul_south">서울 남부</string>
    <string name="area_all">전체</string>
    <string name="area_seoul_gangnam">강남역/역삼</string>
    <string name="area_seoul_apgujeong">압구정/청담</string>
    <string name="area_seoul_samsung">선릉/삼성</string>
    <string name="area_seoul_seocho">서초/방배</string>
    <string name="area_seoul_yangjae">양재/수서/도곡</string>
    <string name="popular_store_avg_personnel">일 평균 대기인원</string>
    <string name="popular_store_standard">을 기준으로 선정한</string>
    <string name="popular_store_BEST">인기 매장 BEST</string>
    <string name="popular_store_review_count">(%d)</string>
    <string name="popular_store_review_count_over">(300+)</string>
    <string name="popular_store_avg">일 평균</string>
    <string name="popular_store_wait">명 대기</string>
    <string name="popular_store_waiting_team">대기 %d팀</string>
    <string name="popular_store_no_waiting_team">대기없음</string>

    <!-- visit completed -->
    <string name="visit_person_visit_person_count">방문인원</string>
    <string name="visit_person_person_count_choose">을 선택하세요</string>
    <string name="visit_person_person_count">인원</string>
    <string name="visit_person_apply">대기 신청하기</string>


    <!-- shop detail -->
    <string name="shop_detail_map">지도보기</string>
    <string name="shop_detail_tab_layout_home">홈</string>
    <string name="shop_detail_tab_layout_menu_list">전체메뉴</string>
    <string name="shop_detail_tab_layout_recent_review">최근리뷰</string>
    <string name="shop_detail_reserve">원격줄서기</string>
    <string name="shop_detail_reservation_unavailable">예약 불가</string>
    <string name="shop_detail_order_unavailable">주문 불가</string>
    <string name="shop_detail_shop_img_page">%d/%d</string>
    <string name="shop_detail_waiting">대기 %d팀</string>
    <string name="shop_detail_review_count">(%d)</string>

    <!-- shop detail home -->
    <string name="shop_detail_home_business_info">영업정보</string>
    <string name="shop_detail_home_sales_time">운영시간</string>
    <string name="shop_detail_home_rest_time">휴식시간</string>
    <string name="shop_detail_home_rest_day">휴무일</string>
    <string name="shop_detail_home_phone_number">전화번호</string>
    <string name="shop_detail_home_shop_pick">매장 PICK!</string>
    <string name="shop_detail_home_amenity">편의시설</string>
    <string name="shop_detail_home_wifi">무선인터넷</string>
    <string name="shop_detail_home_parking">주차 이용 가능</string>
    <string name="shop_detail_home_rest_room">남녀 화장실 구분</string>
    <string name="shop_detail_home_introduce_content">매장소개</string>

    <!-- shop detail menu list -->
    <string name="shop_detail_menu_list_full_menu">전체 메뉴</string>
    <string name="shop_detail_menu_list_full_menu_detail">메뉴 전체보기</string>
    <string name="shop_detail_menu_list_price">%s원</string>

    <!-- shop detail recent review -->
    <string name="shop_detail_recent_review_total_star">전체 평점</string>
    <string name="shop_detail_recent_review_food_taste">음식 맛</string>
    <string name="shop_detail_recent_review_mood">분위기</string>
    <string name="shop_detail_recent_review_kindness">친절도</string>
    <string name="shop_detail_recent_review_cleanliness">청결상태</string>
    <string name="shop_detail_recent_review_full_review_detail">리뷰 전체보기</string>
    <string name="shop_detail_recent_review_title">리뷰 %d건</string>
    <string name="shop_detail_recent_review_score">%.1f점</string>
    <string name="shop_detail_recent_review_day_before">%d일 전</string>

    <!-- Queue -->
    <string name="tv_dialog_complete">대기 신청</string>
    <string name="tv_dialog_complete2">완료</string>
    <string name="tv_waiting_number_text">대기번호</string>
    <string name="tv_waiting_number">66</string>
    <string name="tv_waiting_number_bun">번</string>
    <string name="tv_dialog_now_waiting">현재 내 앞 대기</string>
    <string name="tv_dialog_store_name">매장명</string>
    <string name="tv_dialog_now_waiting_number">4</string>
    <string name="tv_dialog_now_waiting2">팀</string>
    <string name="btn_dialog_confirm">대기 내역 확인하기</string>
    <string name="tv_dialog_store_output">파이브가이즈 여의도</string>
    <string name="tv_dialog_store_number">인원</string>
    <string name="tv_dialog_store_number_output">2</string>
    <string name="tv_dialog_store_number_output_text">명</string>
    <string name="tv_dialog_store_status">신청상태</string>
    <string name="tv_dialog_store_status_output">확정 예정</string>
</resources>
