<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_boarder_radius8"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="45dp"
        android:text="@string/tv_dialog_complete"
        android:textAppearance="@style/TextAppearance.H1"
        android:textColor="@color/secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dialog_complete2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="45dp"
        android:text="@string/tv_dialog_complete2"
        android:textAppearance="@style/TextAppearance.H1"
        android:textColor="@color/gray_700"
        app:layout_constraintStart_toEndOf="@id/tv_dialog_complete"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons_waiting_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_border_radius4"
        android:minWidth="272dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_complete">

        <ImageView
            android:id="@+id/ic_dialog_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:src="@drawable/ic_waiting_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_waiting_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:text="@string/tv_waiting_number_text"
            android:textAppearance="@style/TextAppearance.Body1.SemiBold"
            android:textColor="@color/secondary_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ic_dialog_circle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_waiting_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="14dp"
            android:text="@string/tv_waiting_number"
            android:textAppearance="@style/TextAppearance.H0"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/cons_waiting_number"
            app:layout_constraintStart_toEndOf="@id/tv_waiting_number_text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_waiting_number_bun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="12dp"
            android:text="@string/tv_waiting_number_bun"
            android:textAppearance="@style/TextAppearance.Body1.SemiBold"
            android:textColor="@color/gray_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imv_ic_info_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cons_waiting_number"
        app:srcCompat="@drawable/ic_info_24" />

    <TextView
        android:id="@+id/tv_dialog_now_waiting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="17dp"
        android:text="@string/tv_dialog_now_waiting"
        android:textAppearance="@style/TextAppearance.Caption1.SemiBold"
        android:textColor="@color/primary"
        app:layout_constraintStart_toEndOf="@+id/imv_ic_info_24"
        app:layout_constraintTop_toBottomOf="@+id/cons_waiting_number" />

    <TextView
        android:id="@+id/tv_dialog_now_waiting_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="17dp"
        android:text="@string/tv_dialog_now_waiting_number"
        android:textAppearance="@style/TextAppearance.Caption1.SemiBold"
        android:textColor="@color/primary"
        app:layout_constraintStart_toEndOf="@+id/tv_dialog_now_waiting"
        app:layout_constraintTop_toBottomOf="@+id/cons_waiting_number" />

    <TextView
        android:id="@+id/tv_dialog_now_waiting2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="17dp"
        android:text="@string/tv_dialog_now_waiting2"
        android:textAppearance="@style/TextAppearance.Caption1.SemiBold"
        android:textColor="@color/primary"
        app:layout_constraintStart_toEndOf="@+id/tv_dialog_now_waiting_number"
        app:layout_constraintTop_toBottomOf="@+id/cons_waiting_number" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons_waiting_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/shape_boarder_radius4_gray0"
        android:minWidth="268dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imv_ic_info_24">

        <TextView
            android:id="@+id/tv_dialog_store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/tv_dialog_store_name"
            android:textAppearance="@style/TextAppearance.Body2.SemiBold"
            android:textColor="@color/gray_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_dialog_store_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/tv_dialog_store_output"
            android:textAppearance="@style/TextAppearance.Body2.SemiBold"
            android:textColor="@color/gray_300"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_dialog_store_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_dialog_store_number"
            android:textAppearance="@style/TextAppearance.Body2.SemiBold"
            android:textColor="@color/gray_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_store_name" />

        <TextView
            android:id="@+id/tv_dialog_store_number_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_dialog_store_number_output"
            android:textAppearance="@style/TextAppearance.Body2.SemiBold"
            android:textColor="@color/gray_300"
            app:layout_constraintEnd_toStartOf="@id/tv_dialog_store_number_output_text"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_store_output" />

        <TextView
            android:id="@+id/tv_dialog_store_number_output_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:text="@string/tv_dialog_store_number_output_text"
            android:textAppearance="@style/TextAppearance.Body2.SemiBold"
            android:textColor="@color/gray_300"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_store_output" />

        <TextView
            android:id="@+id/tv_dialog_store_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:text="@string/tv_dialog_store_status"
            android:textAppearance="@style/TextAppearance.Body2.SemiBold"
            android:textColor="@color/gray_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_store_number" />

        <TextView
            android:id="@+id/tv_dialog_store_status_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/tv_dialog_store_status_output"
            android:textAppearance="@style/TextAppearance.Body2.SemiBold"
            android:textColor="@color/gray_300"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_store_number_output_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_dialog_confirm"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/bg_primary_btn"
        android:paddingHorizontal="68dp"
        android:paddingVertical="16dp"
        android:text="@string/btn_dialog_confirm"
        android:textAppearance="@style/TextAppearance.Body1.SemiBold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp"
        app:layout_constraintTop_toBottomOf="@id/cons_waiting_info" />

</androidx.constraintlayout.widget.ConstraintLayout>