<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="visitPersonViewModel"
            type="org.sopt.tabling.presentation.visitPerson.VisitPersonViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_fill_top_radius_16"
        android:backgroundTint="@color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/spacing16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/spacing16" />

        <TextView
            android:id="@+id/tv_visit_person_visit_person_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/visit_person_visit_person_count"
            android:textAppearance="@style/TextAppearance.H1"
            android:textColor="@color/secondary"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_visit_person_person_count_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visit_person_person_count_choose"
            android:textAppearance="@style/TextAppearance.H1"
            android:textColor="@color/gray_800"
            app:layout_constraintStart_toEndOf="@+id/tv_visit_person_visit_person_count"
            app:layout_constraintTop_toTopOf="@+id/tv_visit_person_visit_person_count" />

        <ImageView
            android:id="@+id/iv_visit_person_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:src="@drawable/ic_exit_circle_24"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_visit_person_person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/visit_person_person_count"
            android:textAppearance="@style/TextAppearance.Body1.SemiBold"
            android:textColor="@color/gray_800"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_visit_person_visit_person_count" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_visit_person_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_gray_100_line_99_rect"
            app:layout_constraintBottom_toBottomOf="@+id/tv_visit_person_person"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintTop_toTopOf="@+id/tv_visit_person_person">

            <ImageView
                android:id="@+id/iv_visit_person_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="7dp"
                android:paddingStart="7dp"
                android:paddingEnd="2dp"
                android:src="@drawable/ic_minus_gray_100_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_visit_person_person_count"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@={visitPersonViewModel.personCount}"
                android:textAppearance="@style/TextAppearance.Body1.SemiBold"
                android:textColor="@color/gray_800"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_visit_person_minus"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="0" />

            <ImageView
                android:id="@+id/iv_visit_person_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="7dp"
                android:paddingStart="2dp"
                android:paddingEnd="7dp"
                android:src="@drawable/ic_black_plus_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_visit_person_person_count"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_visit_person_apply"
            style="@style/Widget.FullButton.Basic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="25dp"
            android:height="@dimen/button_height_56"
            android:background="@drawable/shape_fill_8_rect"
            android:backgroundTint="@color/primary"
            android:text="@string/visit_person_apply"
            android:textAppearance="@style/TextAppearance.Body1.SemiBold"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_visit_person_person" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>